tests/negative/typecheck/true.orng
// true.orng:5:23: error: expected a value of type `Int`, got a value of type `Bool`
// fn main() -> Int {true}
//                      ^
// 
fn main() -> Int {true}